--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ body {
   color: #3c3e41;
   background-color: #fff;
 }
+@media (max-width: 700px) {
+  body {
+    font-size: 14px;
+  }
+}
 
 .container {
   max-width: 1150px;
@@ -110,13 +115,38 @@ body {
 .section {
   padding: 90px 0;
 }
+@media (max-width: 950px) {
+  .section {
+    padding: 70px 0;
+  }
+}
+@media (max-width: 700px) {
+  .section {
+    padding: 40px 0;
+  }
+}
 .section__text {
   margin-bottom: 60px;
   text-align: center;
 }
+@media (max-width: 950px) {
+  .section__text {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 700px) {
+  .section__text {
+    margin-bottom: 30px;
+  }
+}
 
 .text {
   line-height: 25px;
+}
+@media (max-width: 700px) {
+  .text {
+    line-height: 20px;
+  }
 }
 
 .bold-text {
@@ -156,16 +186,59 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 950px) {
+  .header__content.container {
+    max-width: 95%;
+  }
+}
+@media (max-width: 950px) {
+  .header__info {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    overflow: auto;
+    background-color: rgba(111, 134, 109, 0.95);
+    transition: all 0.6s ease 0s;
+    padding: 50px 0;
+    z-index: 1;
+  }
+}
+.header__info.active {
+  right: 0;
+}
 .header__top {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 30px;
 }
+@media (max-width: 950px) {
+  .header__top {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+}
 .header__nav-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media (max-width: 950px) {
+  .header__nav-list {
+    display: block;
+    margin: 0 auto;
+    width: 90%;
+  }
+  .header__nav-list li {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+  }
 }
 .header__nav-link {
   margin: 0 15px;
@@ -176,6 +249,14 @@ body {
 .header__nav-link:last-child {
   margin-right: 0;
 }
+@media (max-width: 950px) {
+  .header__nav-link {
+    display: block;
+    margin: 0 auto;
+    font-size: 28px;
+    color: #fff;
+  }
+}
 .header__bottom {
   display: flex;
   align-items: center;
@@ -185,13 +266,91 @@ body {
   width: 150px;
   margin-right: 50px;
 }
+@media (max-width: 950px) {
+  .header__social {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
 .header__btn {
-  color: #ffffff;
+  padding: 5px;
+  background-color: #fff;
+  color: #6f866d;
+  font-weight: 500;
+}
+@media (max-width: 950px) {
+  .header__btn {
+    padding: 10px 5px;
+    background-color: #6f866d;
+    color: #fff;
+    border: 1px solid #fff;
+    font-size: 20px;
+  }
+}
+.header__btn-icon {
+  margin-right: 5px;
+  color: #6f866d;
+}
+@media (max-width: 950px) {
+  .header__btn-icon {
+    color: #fff;
+  }
 }
 .header__logo {
   width: 100%;
 }
 
+.nav__icon {
+  display: none;
+}
+@media (max-width: 950px) {
+  .nav__icon {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 5;
+    transform: rotate(180deg);
+  }
+  .nav__icon span {
+    position: absolute;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    top: 9px;
+    border-radius: 3px;
+    transition: all 0.3s ease 0s;
+  }
+  .nav__icon::before, .nav__icon::after {
+    content: "";
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    border-radius: 3px;
+    transition: all 0.3s ease 0s;
+  }
+  .nav__icon::before {
+    top: 0;
+  }
+  .nav__icon::after {
+    bottom: 0;
+  }
+  .nav__icon.active span {
+    transform: translateX(2px);
+  }
+  .nav__icon.active::before {
+    transform: rotate(-47deg);
+    width: 75%;
+  }
+  .nav__icon.active::after {
+    transform: rotate(47deg);
+    width: 75%;
+  }
+}
 .social {
   display: flex;
   align-items: center;
@@ -211,10 +370,83 @@ body {
   color: #ffffff;
 }
 
+.footer {
+  padding: 20px 0;
+  background: #6f866d;
+  color: #fff;
+}
+.footer__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (max-width: 950px) {
+  .footer__content {
+    justify-content: center;
+    text-align: center;
+  }
+}
+.footer__item {
+  width: 45%;
+}
+@media (max-width: 950px) {
+  .footer__item {
+    width: 80%;
+  }
+}
+.footer__link {
+  display: block;
+  margin-bottom: 10px;
+  color: #fff;
+}
+.footer__social {
+  max-width: 200px;
+  margin-top: 20px;
+}
+@media (max-width: 950px) {
+  .footer__social {
+    margin: 20px auto 0;
+  }
+}
+.footer__logo {
+  margin-bottom: 15px;
+}
+.footer__text {
+  margin-bottom: 10px;
+}
+@media (max-width: 950px) {
+  .footer__map {
+    display: none;
+  }
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  margin-top: 20px;
+  background-color: #fff;
+}
+.copyright__text {
+  color: #6f866d;
+  text-align: center;
+}
+
 /*----BANNER---*/
 .banner {
   padding: 60px 0 360px;
   background: url(../img/banner1.png) center/cover no-repeat;
+}
+@media (max-width: 950px) {
+  .banner {
+    padding: 60px 0 280px;
+  }
+}
+@media (max-width: 700px) {
+  .banner {
+    padding: 60px 0 270px;
+  }
 }
 .banner__content {
   display: flex;
@@ -227,10 +459,33 @@ body {
   background-color: #fff;
   border: 5px solid #6f866d;
 }
+@media (max-width: 950px) {
+  .banner__content {
+    width: 350px;
+    height: 150px;
+  }
+}
+@media (max-width: 700px) {
+  .banner__content {
+    width: 300px;
+    height: 130px;
+  }
+}
 .banner__title {
   margin-bottom: 20px;
   font-size: 40px;
   text-align: center;
+}
+@media (max-width: 950px) {
+  .banner__title {
+    font-size: 30px;
+  }
+}
+@media (max-width: 700px) {
+  .banner__title {
+    margin-bottom: 15px;
+    font-size: 28px;
+  }
 }
 
 /*---ABOUT----*/
@@ -238,11 +493,34 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+@media (max-width: 1200px) {
+  .about__info {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+}
 .about__info-item {
   width: 48%;
   display: flex;
   margin: -1px 20px 20px 0;
   border: 9px solid #6f866d;
+}
+@media (max-width: 1200px) {
+  .about__info-item {
+    width: 60%;
+  }
+}
+@media (max-width: 950px) {
+  .about__info-item {
+    width: 80%;
+  }
+}
+@media (max-width: 700px) {
+  .about__info-item {
+    width: 95%;
+    flex-direction: column;
+  }
 }
 .about__info-description {
   width: 50%;
@@ -251,6 +529,11 @@ body {
   justify-content: center;
   flex-direction: column;
   padding: 5px;
+}
+@media (max-width: 700px) {
+  .about__info-description {
+    width: 95%;
+  }
 }
 .about__info-title {
   margin-bottom: 10px;
@@ -266,13 +549,15 @@ body {
   width: 50%;
   background-color: #6f866d;
 }
+@media (max-width: 700px) {
+  .about__info-img {
+    width: 100%;
+  }
+}
 .about__img {
   width: 100%;
   height: 100%;
   margin-bottom: -1px;
-}
-.about__text {
-  margin-bottom: 50px;
 }
 
 /*----TYPES----*/
@@ -292,6 +577,16 @@ body {
 }
 .types__item-img {
   width: 40%;
+}
+@media (max-width: 950px) {
+  .types__item-img {
+    width: 50%;
+  }
+}
+@media (max-width: 950px) {
+  .types__item-img {
+    width: 70%;
+  }
 }
 
 .tabs {
@@ -322,6 +617,16 @@ body {
   border: 2px solid #fff;
   border-radius: 10px;
 }
+@media (max-width: 950px) {
+  .tabs__title {
+    margin: 0 auto 30px;
+  }
+}
+@media (max-width: 950px) {
+  .tabs__title {
+    margin: 0 auto 15px;
+  }
+}
 .tabs__content {
   display: none;
   text-align: center;
@@ -338,14 +643,31 @@ body {
   padding: 20px 10px 0;
   border: 3px solid #6f866d;
 }
+@media (max-width: 950px) {
+  .scheldule__content {
+    width: 80%;
+  }
+}
+@media (max-width: 700px) {
+  .scheldule__content {
+    width: 100%;
+    padding: 15px 7px 0;
+  }
+}
 .scheldule__item {
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
+  background-color: #fff;
 }
 .scheldule__item:nth-child(odd) {
   background-color: rgba(111, 134, 109, 0.15);
+}
+@media (max-width: 700px) {
+  .scheldule__item {
+    font-size: 13px;
+  }
 }
 .scheldule__time {
   width: 25%;
@@ -364,9 +686,19 @@ body {
   font-weight: 500;
   text-align: right;
 }
+@media (max-width: 700px) {
+  .scheldule__instructor {
+    width: 30%;
+  }
+}
 
 .block__item {
   margin-bottom: 20px;
+}
+@media (max-width: 700px) {
+  .block__item {
+    margin-bottom: 12px;
+  }
 }
 .block__item:last-child {
   margin-bottom: 0;
@@ -409,6 +741,17 @@ body {
 .block__title.active::after {
   transform: rotate(-40deg);
 }
+@media (max-width: 950px) {
+  .block__title {
+    font-size: 18px;
+  }
+}
+@media (max-width: 700px) {
+  .block__title {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+}
 .block__content {
   display: none;
 }
@@ -438,6 +781,17 @@ body {
   background-color: #fff;
   color: #6f866d;
 }
+@media (max-width: 950px) {
+  .price__info-title {
+    font-size: 18px;
+  }
+}
+@media (max-width: 700px) {
+  .price__info-title {
+    font-size: 16px;
+    margin-bottom: 12px;
+  }
+}
 .price__info-item {
   display: flex;
   align-items: center;
@@ -447,6 +801,31 @@ body {
 .price__description {
   font-weight: 500;
 }
+@media (max-width: 700px) {
+  .price__description {
+    width: 68%;
+  }
+}
 .price__value {
   font-weight: 600;
+}
+
+/*----GALLERY----*/
+.gallery {
+  background: url(../img/18.jpg) center/cover no-repeat;
+}
+.gallery__content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery__img-container {
+  width: 25%;
+}
+@media (max-width: 700px) {
+  .gallery__img-container {
+    width: 50%;
+  }
+}
+.gallery__img {
+  width: 100%;
 }
