--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,11 @@ body {
   padding: 20px 0;
   background-color: #6f866d;
 }
+@media (max-width: 950px) {
+  .header {
+    padding: 8px 0;
+  }
+}
 .header__content {
   display: flex;
   align-items: center;
@@ -196,7 +201,7 @@ body {
     position: fixed;
     top: 0;
     right: -100%;
-    width: 100%;
+    width: 50%;
     height: 80%;
     display: flex;
     flex-direction: column-reverse;
@@ -204,8 +209,13 @@ body {
     overflow: auto;
     background-color: rgba(111, 134, 109, 0.95);
     transition: all 0.6s ease 0s;
-    padding: 50px 0;
+    padding: 50px 0 50px;
     z-index: 1;
+  }
+}
+@media (max-width: 550px) {
+  .header__info {
+    width: 100%;
   }
 }
 .header__info.active {
@@ -232,11 +242,10 @@ body {
   .header__nav-list {
     display: block;
     margin: 0 auto;
-    width: 90%;
   }
   .header__nav-list li {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
     text-align: center;
   }
 }
@@ -253,7 +262,7 @@ body {
   .header__nav-link {
     display: block;
     margin: 0 auto;
-    font-size: 28px;
+    font-size: 24px;
     color: #fff;
   }
 }
@@ -284,7 +293,7 @@ body {
     background-color: #6f866d;
     color: #fff;
     border: 1px solid #fff;
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 .header__btn-icon {
