--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ body {
     top: 0;
     right: -100%;
     width: 50%;
-    height: 80%;
+    height: 87%;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
@@ -444,8 +444,13 @@ body {
 
 /*----BANNER---*/
 .banner {
-  padding: 60px 0 360px;
+  padding: 60px 0 365px;
   background: url(../img/banner1.png) center/cover no-repeat;
+}
+@media (min-width: 1580px) {
+  .banner {
+    padding: 60px 0 500px;
+  }
 }
 @media (max-width: 950px) {
   .banner {
