--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,8 @@ body {
 }
 
 .title {
-  font-family: "Gabriela", serif;
-  font-weight: 600;
+  font-family: "Philosopher", sans-serif;
+  font-weight: 700;
 }
 
 .section {
@@ -251,7 +251,7 @@ body {
 }
 .header__nav-link {
   margin: 0 15px;
-  font-family: "Gabriela", serif;
+  font-family: "Philosopher", sans-serif;
   font-size: 18px;
   color: #ffffff;
 }
@@ -625,7 +625,7 @@ body {
   padding: 6px 12px;
   background-color: #fff;
   color: #6f866d;
-  font-family: "Gabriela", serif;
+  font-family: "Philosopher", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
