--- a/css/style.css
+++ b/css/style.css
@@ -514,11 +514,6 @@ body {
 .about__info {
   display: flex;
   flex-wrap: wrap;
-  opacity: 0;
-}
-.about__info.element-show {
-  opacity: 1;
-  transition: all 1s;
 }
 @media (max-width: 1200px) {
   .about__info {
@@ -532,6 +527,13 @@ body {
   display: flex;
   margin: -1px 20px 20px 0;
   border: 9px solid #6f866d;
+  opacity: 0;
+  transform: scale(0);
+}
+.about__info-item.element-show {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 1.2s;
 }
 @media (max-width: 1200px) {
   .about__info-item {
