--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,11 @@ body {
     padding-top: 65px;
   }
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
+  .banner {
+    padding-top: 40px;
+  }
+}
 .banner__content {
   display: flex;
   align-items: center;
